# ghostwin

./: .gitignore  CARGO_CONFIG_FIX.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  ENVIRONMENT_OPTIMIZATION.md  GUNPOWDER.md  INSTALLER_INFO.md  README.md  RUST_IMPLEMENTATION.md  SCRIPT_FIXES_FINAL.md  SECURITY.md  SETUP_GUIDE.md  STAGING_COMPLETE.md  STATUS.md  SimpleInstaller.ps1  TODO.md  TROUBLESHOOTING.md  build-installer.ps1  build.rs  ghostwin-dell-optiplex.toml  ghostwin.toml  install.ps1  installer.iss  installer.ps1  installerLegacy.ps1  migrate_tools.sh  test-syntax.ps1  test_partial.ps1
.github/workflows/: release.yml
config/: autounattend.xml  winpeshl.ini
dev/: README.md
dev/powershell/: test-partial-installer.ps1  test-syntax.ps1
docs/: COMMANDS.md  DOCS.md  DRIVER_GUIDE.md  PACKAGING_PLAN.md  VMD_BYPASS_GUIDE.md  architecture.md  windows-build.md
docs/getting-started/: setup.md
docs/guides/: adk-winpe-guide.md  vmd-bypass.md
docs/project/: index.md  packaging-plan.md
docs/reference/: commands.md  configuration.md  troubleshooting.md
examples/: remote_access_setup.md
scripts/: Download-Drivers.ps1  Preflight-Check.ps1
scripts/advanced/network/: change_connection_profile.ps1
scripts/basic/: .options.txt
src/: main.rs
src/cli/: build.rs  gui.rs  logon.rs  mod.rs  system_setup.rs  tools.rs  validate.rs
src/config/: mod.rs
src/drivers/: mod.rs
src/executor/: mod.rs
src/tools/: mod.rs
src/utils/: logging.rs  mod.rs  recovery.rs
src/vnc/: mod.rs
src/wim/: mod.rs
ui/: ghostwin.slint
(+6 files in other folders)
